--- a/Application.Common/Configurations/configuration.release.config
+++ b/Application.Common/Configurations/configuration.release.config
@@ -12,4 +12,5 @@
   <folder mailTemplate="templates/email/" baseResourceFolder="C:\data\projects\myERP\api\App.UI.Test/resources/"></folder>
   <integration-test baseUrl="http://localhost:8888"></integration-test>
   <facebook baseApiUrl="https://graph.facebook.com"></facebook>
+  <twitter baseApiUrl="https://api.twitter.com/1.1/"></twitter>
 </appconfiguration>
