--- a/App.Api/packages.config
+++ b/App.Api/packages.config
@@ -41,6 +41,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="OAuth.Net" version="0.6" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="StyleCop" version="5.0.0-alpha01" targetFramework="net461" />
