--- a/App.Service.Impl/packages.config
+++ b/App.Service.Impl/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="OAuth.Net" version="0.6" targetFramework="net452" />
   <package id="StyleCop" version="5.0.0-alpha01" targetFramework="net452" />
 </packages>
