--- a/Application.Common/packages.config
+++ b/Application.Common/packages.config
@@ -3,6 +3,29 @@
   <package id="AutoMapper" version="4.0.4" targetFramework="net451" />
   <package id="Castle.Core" version="3.3.0" targetFramework="net451" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net451" />
+  <package id="DotNetOpenAuth" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.Core" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.Core.UI" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.InfoCard" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.InfoCard.UI" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OAuth.Common" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OAuth.Core" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OAuth.ServiceProvider" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OAuth2.AuthorizationServer" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OAuth2.Client" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OAuth2.Client.UI" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OAuth2.ClientAuthorization" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OAuth2.Core" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OAuth2.ResourceServer" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OpenId.Core" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OpenId.Core.UI" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OpenId.Provider" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OpenId.Provider.UI" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OpenId.RelyingParty.UI" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OpenIdInfoCard.UI" version="4.2.0.13024" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OpenIdOAuth" version="4.2.0.13024" targetFramework="net451" />
   <package id="Elasticsearch.Net" version="2.4.1" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
   <package id="LinqKit" version="1.0" targetFramework="net45" />
@@ -11,10 +34,13 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.Net.Http" version="2.0.20505.0" targetFramework="net451" />
   <package id="mongocsharpdriver" version="1.9.2" targetFramework="net451" />
   <package id="MongoDB.Kennedy.Concurrency" version="1.0.12" targetFramework="net451" />
   <package id="NEST" version="2.3.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net451" />
+  <package id="OAuth" version="1.0.3" targetFramework="net451" />
+  <package id="OAuthDotNetClient" version="1.0.1" targetFramework="net451" />
   <package id="SharpKml.Core" version="2.1.0" targetFramework="net451" />
   <package id="StyleCop" version="5.0.0-alpha01" targetFramework="net451" />
 </packages>
