post message to linkedin

--- a/App.Service.Impl/App.Service.Impl.csproj
+++ b/App.Service.Impl/App.Service.Impl.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Connector\ConnectorBuilderFactory.cs" />
     <Compile Include="Connector\FacebookRequestBuilder.cs" />
     <Compile Include="Connector\TwitterRequestBuilder.cs" />
+    <Compile Include="LinkedIn\LinkedInService.cs" />
     <Compile Include="Message\MessageService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
