--- a/App.Service.Impl/App.Service.Impl.csproj
+++ b/App.Service.Impl/App.Service.Impl.csproj
@@ -46,15 +46,17 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Twitterizer2">
+      <HintPath>..\packages\Twitterizer2\Twitterizer2.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrap.cs" />
-    <Compile Include="Connector\ConnectorBuilderFactory.cs" />
-    <Compile Include="Connector\FacebookRequestBuilder.cs" />
-    <Compile Include="Connector\TwitterRequestBuilder.cs" />
+    <Compile Include="Facebook\FacebookService.cs" />
     <Compile Include="LinkedIn\LinkedInService.cs" />
     <Compile Include="Message\MessageService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Twitter\TwitterService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\App.Service.Service\App.Service.csproj">
