--- a/App.Service.Service/App.Service.csproj
+++ b/App.Service.Service/App.Service.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Facebook\IFacebookService.cs" />
+    <Compile Include="Facebook\ShareFacebookComment.cs" />
     <Compile Include="LinkedIn\ILinkedInService.cs" />
     <Compile Include="LinkedIn\LinkedVisibility.cs" />
     <Compile Include="LinkedIn\ShareComment.cs" />
@@ -52,6 +54,8 @@
     <Compile Include="Message\PostMessageRequest.cs" />
     <Compile Include="Message\PostMessageResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Twitter\ITwitterService.cs" />
+    <Compile Include="Twitter\ShareTwitterComment.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
