--- a/App.Service.Service/App.Service.csproj
+++ b/App.Service.Service/App.Service.csproj
@@ -51,6 +51,7 @@
     <Compile Include="LinkedIn\ShareComment.cs" />
     <Compile Include="LinkedIn\ShareCommentResponse.cs" />
     <Compile Include="Message\IMessageService.cs" />
+    <Compile Include="Message\MessageListItem.cs" />
     <Compile Include="Message\PostMessageRequest.cs" />
     <Compile Include="Message\PostMessageResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
