--- a/Application.Common/App.Common.csproj
+++ b/Application.Common/App.Common.csproj
@@ -330,6 +330,7 @@
     <Compile Include="Validation\Attribute\ValidationRequest.cs" />
     <Compile Include="Validation\Attribute\ValueInCollectionAttribute.cs" />
     <Compile Include="Validation\Attribute\ValueInRangeAttribute.cs" />
+    <Compile Include="Validation\ConnectorException.cs" />
     <Compile Include="Validation\ElementNotFound.cs" />
     <Compile Include="Extensions\DecimalExtension.cs" />
     <Compile Include="Extensions\EnumExtension.cs" />
